# 42_tasks

./: tests
Fillit/: Makefile  fillit.h  main.c  read.c  tetra_functions.c
Fillit/libft/: Makefile  (+10 more)
Get_Next_Line/: get_next_line.c  get_next_line.h
Lem_in/: Makefile  author
Libft/: Makefile  ft_getone.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_strclr.c  ft_strcpy.c  ft_strlcat.c  ft_strmap.c  ft_strmapi.c  ft_strncmp.c  ft_strnew.c  ft_strrchr.c  ft_strsub.c  ft_strtrim.c  libft.h
Printf/: ft_printf.c  ft_printf.h  handler.c  handler_2.c  handler_3.c  handler_4.c  handler_5.c  ifs_for_itoa_dif_types.c  internal_oper.c  internal_output.c  main.c  output_format_handler.c  string_edit.c  vsprintf.c
Printf_2/: CMakeLists.txt
Printf_2/Libft/: ft_strlen.c  ft_strncpy.c  ft_strsplit.c
Printf_2/includes/: ft_printf.h
Printf_2/sources/: bonus.c  ft_option_handler.c  ft_printf.c  ft_vsnprintf.c  number_handler.c  string_handler.c  utils.c
Printf_2/tests/: libc_printf.c  main.c  test_2.c
fdf/: Makefile  author
fillit/: valid.c
fillit3/: test.fillit  tetra_functions.c  tools.c
fillit_new/: Makefile  author
ft_printf/: Makefile  main.c
give_push_swap/: author
printf_main/: author  evaluate_char.c  evaluate_color.c  evaluate_date.c  evaluate_double.c  evaluate_double_3.c  evaluate_num.c  evaluate_num_2.c  evaluate_num_3.c  ft_evaluator.c  ft_printf.c  ft_printf.h  ft_vasprintf.c  ft_vector.c  ft_vprintf.c  main.c  utils.c
push_swap/: Makefile  author
(+316 files in other folders)
